# hifi

./: .gitignore  CMakeCache.py  CMakeLists.txt  hifi_resources.py  hifi_vcpkg.py  prebuild.py
.github/workflows/: cmake.yml
android/: build.gradle  containerized_build.sh  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/apps/framePlayer/: CMakeLists.txt  build.gradle
android/apps/framePlayer/src/main/: AndroidManifest.xml
android/apps/framePlayer/src/main/cpp/: PlayerWindow.cpp  PlayerWindow.h  RenderThread.cpp  RenderThread.h  main.cpp
android/apps/framePlayer/src/main/java/io/highfidelity/frameplayer/: FramePlayerActivity.java  FramePlayerService.java  QuestOculusActivity.java  RenderActivity.java
android/docker/: Dockerfile
assignment-client/: CMakeLists.txt
assignment-client/src/: Agent.cpp  Agent.h
cmake/: init.cmake
cmake/macros/: AutoScribeShader.cmake  CompileSpirvShader.cmake  LinkHifiLibraries.cmake  SetPackagingParameters.cmake  SetupHifiProject.cmake  SetupHifiTestCase.cmake  Target3dRudder.cmake  TargetDraco.cmake  TargetEtc2Comp.cmake  TargetGlm.cmake  TargetNsight.cmake  TargetOpenSSL.cmake  TargetSDL2.cmake  TargetSPIRV.cmake  TargetVulkan.cmake  TargetZlib.cmake
cmake/modules/: Find3DConnexionClient.cmake  Find3dRudderSdk.cmake  FindAssimp.cmake  FindBinaryVR.cmake
frames/: 20190808_2028.json
gvr-interface/: CMakeLists.txt
ice-server/: CMakeLists.txt
interface/: CMakeLists.txt
interface/src/: Application.cpp  Application.h  LODManager.cpp  (+6 more)
plugins/: CMakeLists.txt
tests/spacemouse/: CMakeLists.txt
tests/spacemouse/src/: main.cpp
tools/: CMakeLists.txt  noramlizeFrame.py  scribe.py  shadergen.py  unscribe.py
tools/browser/: CMakeLists.txt
tools/browser/src/: ApplicationRoot.qml  BrowserWindow.qml  DownloadView.qml  main.cpp
(+633 files in other folders)
